Merge pull request #9 from intrinio/ELH/field-additions
additions, updates, and fixes